// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label component should render correctly with all the props given 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 300;
  color: pink;
  margin: 0px 0px 8px 0px;
  cursor: pointer;
}

.c0::after {
  color: red;
  content: ' *';
}

<div>
  <label
    class="c0"
    required=""
  >
    Demo Label
  </label>
</div>
`;

exports[`Label component should render correctly with default props 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 400;
  color: #616161;
  margin: 0px 8px 0px 0px;
  cursor: default;
}

<div>
  <label
    class="c0"
  >
    Label
  </label>
</div>
`;
